--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Monitor</h1>
+            <h1 class="page-header">Monitor {{info}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
