ngRadialGauge in with error

--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -14,4 +14,11 @@
         <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
 
     </div>
+
+    <div class="row">
+        <div width="300" ng-radial-gauge ranges="ranges" value="value" value-unit="unit"
+             precision="precision" lower-limit="lowerLimit" upper-limit="upperLimit">
+        </div>
     </div>
+
+</div>
