updating gauge based on notification
still getting injection error

--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="row">
+        <button ng-click="changeValue()">Update</button>
         <div width="300" ng-radial-gauge ranges="ranges" value="value" value-unit="unit"
              precision="precision" lower-limit="lowerLimit" upper-limit="upperLimit">
         </div>
