gauge and list showing - error on charts page

--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -19,7 +19,29 @@
         <button ng-click="changeValue()">Update</button>
         <div width="300" ng-radial-gauge ranges="ranges" value="value" value-unit="unit"
              precision="precision" lower-limit="lowerLimit" upper-limit="upperLimit">
+
         </div>
+
+            <div class="span12">
+                <table class="table table-striped table-bordered" ng-repeat="mc in machineCounters">
+
+                    <thead>
+                    <tr>
+                        <th class="span9">{{mc.machine}} {{mc.counters[0].value | number:2}}%  - {{mc.dateTime}} </th>
+                    </tr>
+                    <tr>
+                        <th class="span2">Counter</th>
+                        <th class="span7">Value</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="ctr in mc.counters">
+                        <td class="span2" ng-bind="ctr.counter"></td>
+                        <td class="span7" ng-bind="ctr.value"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
     </div>
 
 </div>
