updating charts on click

--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -7,6 +7,7 @@
 <div class="row">
     <div class="col-lg-6 col-sm-12" id="line-chart" ng-controller="ChartCtrl">
         <div class="panel panel-default">
+            <button ng-click="changeData()">Change Data</button>
             <div class="panel-heading">Line Chart</div>
             <div class="panel-body">
                 <canvas id="line" class="chart chart-line chart-xl" data="line.data" labels="line.labels" legend="true"
@@ -16,6 +17,7 @@
     </div>
     <div class="col-lg-6 col-sm-12" id="bar-chart" ng-controller="ChartCtrl">
         <div class="panel panel-default">
+            <button ng-click="changeData()">Change Data</button>
             <div class="panel-heading">Bar Chart</div>
             <div class="panel-body">
                 <canvas id="bar" class="chart chart-bar" data="bar.data" labels="bar.labels" series="bar.series"
