--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -47,7 +47,7 @@
 
                             </div>
                         </th>
-                        <th class="span6">{{mc.counterObject.machine}} {{mc.counterObject.counters[0].value | number:2}}%  - {{mc.counterObject.dateTime}} </th>
+                        <th class="span6">Name: {{mc.counterObject.machine}} - CPU: {{mc.counterObject.counters[0].value | number:2}}% {{ mc.counterObject.counters.length >= 9 ? ' - Current Connections: ' + mc.counterObject.counters[8].value : ''}} - {{mc.counterObject.dateTime}} </th>
                         <!--
                         <th class="span6">
                             <div width="100" ng-radial-gauge ranges="ranges" value="value" value-unit="unit"
