--- a/app/views/redis.html
+++ b/app/views/redis.html
@@ -1,11 +1,22 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Redis Monitor {{info}}</h1>
+            <h1 class="page-header">Redis Monitor</h1>
+            <!--<h1 class="page-header">Redis Monitor {{info}}</h1>-->
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+
+    <div class="row">
+
+        <stats number="" comments="NC US Read" colour="green" ></stats>
+        <stats number="" comments="NC US Backplane" colour="red"></stats>
+        <stats number="" comments="NC US Write" colour="yellow" ></stats>
+
+
+    </div>
+    <!--
     <div class="row">
 
         <stats number="6" comments="New comments!" colour="primary" type="comments"></stats>
@@ -14,6 +25,7 @@
         <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
 
     </div>
+    --
     <div class="row">
 <!--
         <div ng-init="isCollapsed = false">
@@ -27,7 +39,7 @@
             </div>
         </div>
 -->
-
+<!--
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -42,6 +54,7 @@
                 </div>
             </div>
         </div>
+        -->
 
 
     </div>
@@ -64,7 +77,7 @@
                 -->
                 </thead>
                 <tbody>
-
+<!--
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
@@ -79,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-
+-->
 
 
 
