--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -1,11 +1,31 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Dashboard</h1>
+            <h1 class="page-header">Pulse Dashboard</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+
+    <div class="row">
+
+        <stats number="" comments="NC US" colour="green"></stats>
+        <stats number="" comments="West US" colour="red"></stats>
+        <stats number="" comments="EU North" colour="yellow"></stats>
+
+
+    </div>
+<!--
+    <div class="row">
+
+        <stats number="6" comments="New comments!" colour="primary"></stats>
+        <stats number="12" comments="New tasks!" colour="primary" type="user"></stats>
+        <stats number="18" comments="New orders!" colour="yellow" type="shopping-cart"></stats>
+        <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
+
+    </div>
+-->
+    <!--
     <div class="row">
         
         <stats number="6" comments="New comments!" colour="primary" type="comments"></stats>
@@ -14,6 +34,7 @@
         <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
 
     </div>
+    --
     
     <!-- /.panel -->
     <div class="row">
