--- a/app/views/monitor.html
+++ b/app/views/monitor.html
@@ -1,11 +1,13 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Monitor {{info}}</h1>
+            <h1 class="page-header">SignalR Hub Status</h1>
+          <!--  <h1 class="page-header">Monitor {{info}}</h1> -->
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+    <!--
     <div class="row">
 
         <stats number="6" comments="New comments!" colour="primary" type="comments"></stats>
@@ -14,6 +16,7 @@
         <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
 
     </div>
+    -->
 
     <div class="row">
         <button ng-click="changeValue()">Update</button>
